# Viper-Browser

./: CMakeLists.txt
src/core/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/credential_store_kwallet/: CredentialStoreKWallet.cpp
src/plugins/credential_store_secret/: CMakeLists.txt  CredentialStoreSecret.cpp  CredentialStoreSecret.h
